# sentinel-gateway

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.saas.yml  docker-compose.yml
.github/workflows/: ci.yml
.specify/integrations/: agy.manifest.json  claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/config/: gateway.toml
backend/crates/gateway-audit/: Cargo.toml
backend/crates/gateway-audit/src/: data_lake.rs  error.rs  events.rs  lib.rs  llm_log_service.rs  service.rs  webhook.rs
backend/crates/gateway-auth/: Cargo.toml
backend/crates/gateway-auth/src/: api_key.rs  api_key_cache.rs  context.rs  csrf.rs  error.rs  jwt.rs  lib.rs  middleware.rs  password.rs  roles.rs  sso.rs  token_blacklist.rs
backend/crates/gateway-core/: Cargo.toml
backend/crates/gateway-core/src/: circuit_breaker.rs  crypto.rs  engine.rs  error.rs  graphql.rs  grpc.rs  health.rs  http3.rs  inference_metrics.rs  ip.rs  lib.rs  load_balancer.rs  proxy.rs  rewrite.rs  websocket.rs
backend/crates/gateway-db/: Cargo.toml
backend/crates/gateway-db/src/: error.rs  lib.rs  pool.rs
backend/crates/gateway-db/src/models/: api_key.rs  audit_log.rs  backend.rs  guardrail_rule.rs  license.rs  llm_feedback.rs  llm_log.rs  mod.rs  organization.rs  prompt.rs  route.rs  setting.rs  sso.rs  team.rs  tenant.rs  tenant_license.rs  tenant_pricing.rs  usage_record.rs  user.rs  virtual_key.rs  webhook_endpoint.rs  webhook_failure.rs
backend/crates/gateway-db/src/repository/: api_key.rs  audit_log.rs  backend.rs  guardrail_rule.rs  llm_feedback.rs  llm_log.rs  mod.rs  organization.rs  prompt.rs  route.rs  setting.rs  sso.rs  team.rs  tenant.rs  tenant_license.rs  tenant_pricing.rs  usage_record.rs  user.rs  virtual_key.rs  webhook_endpoint.rs  webhook_failure.rs
backend/crates/gateway-license/: Cargo.toml
backend/crates/gateway-license/src/: activation.rs  client.rs  error.rs  features.rs  fingerprint.rs  lib.rs  tenant_license.rs  usage_reporter.rs  validator.rs
backend/crates/gateway-llm/: Cargo.toml
backend/crates/gateway-llm/src/: adapter.rs  cache.rs  cost.rs  error.rs  federation.rs  lib.rs  pii.rs  privacy.rs  provider.rs  router.rs  smart_router.rs  stream.rs  token_counter.rs
backend/crates/gateway-mcp/: Cargo.toml
backend/crates/gateway-mcp/src/: client.rs  error.rs  lib.rs  protocol.rs  registry.rs  server.rs  session.rs
backend/crates/gateway-plugin/: Cargo.toml
backend/crates/gateway-plugin/src/: context.rs  decision.rs  error.rs  lib.rs  plugin.rs  registry.rs  tests.rs
backend/crates/gateway-policy/: Cargo.toml
backend/crates/gateway-policy/src/: budget.rs  cel_cost.rs  engine.rs  error.rs  guardrails.rs  ip_filter.rs  lib.rs  middleware.rs  rate_limiter.rs  semantic.rs
backend/crates/gateway-server/: Cargo.toml
backend/crates/gateway-server/src/: config.rs  guardrails_build.rs  main.rs  observability_export.rs  state.rs
backend/crates/gateway-server/src/handlers/: admin.rs  api_keys.rs  audit_logs.rs  auth.rs  backends.rs  feature_gate.rs  feedback.rs  guardrails.rs  license.rs  llm.rs  llm_logs.rs  mcp.rs  mod.rs  organizations.rs  pricing.rs  prompts.rs  proxy.rs  proxy_routes.rs  settings.rs  sso_auth.rs  sync.rs  teams.rs  tenants.rs  usage.rs  users.rs  virtual_keys.rs  webhooks.rs
backend/crates/gateway-server/src/routes/: health.rs  mod.rs
backend/crates/gateway-telemetry/: Cargo.toml
backend/crates/gateway-telemetry/src/: config.rs  init.rs  lib.rs  metrics.rs  middleware.rs  propagation.rs
backend/crates/gateway-tenant/: Cargo.toml
backend/crates/gateway-tenant/src/: context.rs  error.rs  lib.rs  middleware.rs  service.rs  sync.rs
backend/crates/gateway-tests/: Cargo.toml
backend/crates/gateway-tests/src/: fixtures.rs  lib.rs
backend/crates/gateway-tests/tests/: auth_flow.rs  core_flow.rs  license_flow.rs  llm_flow.rs  policy_flow.rs
backend/keys/: private.pem.example  public.pem.example
backend/migrations/: 001_tenants.sql  002_users.sql  003_api_keys.sql  004_backends.sql  005_routes.sql  006_audit_logs.sql  007_usage_records.sql  008_licenses.sql  009_webhook_endpoints.sql  010_settings.sql  011_add_providers.sql  012_mcp_servers.sql  013_production_hardening.sql  014_provider_catalog_expansion.sql  015_prompts.sql  016_data_policy.sql  017_guardrail_rules.sql  018_virtual_keys_teams_logs_pricing.sql  019_sso_providers.sql  020_feedback_and_organizations.sql  021_tenant_licenses.sql
deploy/docker/: otel-collector.yaml
deploy/grafana/: sentinel-gateway-dashboard.json
deploy/helm/sentinel-gateway/: Chart.yaml  values.yaml
deploy/prometheus/: alerts.yml  prometheus.yml  rules.yml
docs/: CHANGELOG.md  api-reference.md  architecture.md  configuration.md  deployment.md  editions.md  operations.md  security.md
docs/features/: guardrails.md  inference-routing.md  mcp.md  observability.md  prompts.md  rate-limiting.md  semantic-policies.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vitest.config.ts
frontend/public/: theme-bootstrap.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ConfirmDialog.tsx  FeatureGate.test.tsx  FeatureGate.tsx  PlanBadge.tsx  ThemeToggle.tsx  UserMenu.tsx
frontend/src/hooks/: use-plan.test.ts  use-plan.ts  use-toast.ts
frontend/src/layouts/: DashboardLayout.tsx  DocsLayout.tsx
frontend/src/lib/: api.test.ts  api.ts  auth.ts  fp-api.ts  fp-validate.test.ts  fp-validate.ts  jwt.test.ts  jwt.ts  theme.ts
frontend/src/pages/: ApiKeys.tsx  AuditLogs.tsx  Backends.tsx  Billing.tsx  Dashboard.tsx  Feedback.test.tsx  Feedback.tsx  Guardrails.tsx  LlmAnalytics.tsx  LlmCatalog.tsx  LlmPlayground.tsx  Login.tsx  McpServers.tsx  Organizations.test.tsx  Organizations.tsx  Prompts.tsx  Routes.tsx  Settings.tsx  SsoProviders.tsx  Users.tsx
frontend/src/test/: setup.ts
scripts/: licencia-bootstrap.sh
(+26 files in other folders)
