[workspace]
resolver = "2"
members = [
    "crates/gateway-core",
    "crates/gateway-auth",
    "crates/gateway-tenant",
    "crates/gateway-license",
    "crates/gateway-llm",
    "crates/gateway-policy",
    "crates/gateway-telemetry",
    "crates/gateway-audit",
    "crates/gateway-db",
    "crates/gateway-server",
    "crates/gateway-mcp",
    "crates/gateway-plugin",
    "crates/gateway-tests",
]

[workspace.package]
version = "1.2.0"
edition = "2021"
authors = ["Sentinel Gateway Contributors"]
license = "MIT"
rust-version = "1.75"


[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "request-id", "timeout", "set-header"] }
hyper = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry
opentelemetry = { version = "0.27" }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "metrics", "logs"] }
opentelemetry-semantic-conventions = "0.27"
tracing-opentelemetry = "0.28"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }

# Auth / crypto
jsonwebtoken = "9.3"
argon2 = "0.5"
sha2 = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

# Config
config = { version = "0.14", features = ["toml", "yaml"] }
dotenvy = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# gRPC
tonic = { version = "0.12", features = ["transport"] }
prost = "0.12"

# GraphQL (async-graphql)
async-graphql = { version = "7", features = ["tracing"] }

# Prometheus metrics
prometheus = { version = "0.13", features = ["process"] }

# Redis
fred = { version = "9.1", features = ["i-all", "serde-json"] }

# Miscellaneous
bytes = "1"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
once_cell = "1"
dashmap = "6.1"
parking_lot = "0.12"
base64 = "0.22"
validator = { version = "0.18", features = ["derive"] }
cel-interpreter = "0.9"
hex = "0.4"
toml = "0.8"
aes-gcm = "0.10"
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
rmp-serde = "1.3"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
