[package]
name = "gateway-audit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gateway-db = { path = "../gateway-db" }
gateway-telemetry = { path = "../gateway-telemetry" }
axum = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
hmac = "0.12"
base64 = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
prometheus = { workspace = true }
once_cell = { workspace = true }
