[package]
name = "gateway-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gateway-db = { path = "../gateway-db" }
gateway-auth = { path = "../gateway-auth" }
gateway-tenant = { path = "../gateway-tenant" }
gateway-telemetry = { path = "../gateway-telemetry" }
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
hyper = { workspace = true }
reqwest = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
parking_lot = { workspace = true }
tonic = { workspace = true }
tokio-tungstenite = "0.24"
regex = "1"
chacha20poly1305 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
