[package]
name = "gateway-license"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
saas = []

[dependencies]
gateway-db = { path = "../gateway-db" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
jsonwebtoken = { workspace = true }
base64 = { workspace = true }
once_cell = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rmp-serde = { workspace = true }
rmpv = { version = "1.0", features = ["with-serde"] }
ed25519-dalek = { workspace = true }
aes-gcm = { workspace = true }
scrypt = { version = "0.11", default-features = false }
hostname = "0.4"
fred = { workspace = true }
