[package]
name = "gateway-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gateway-db = { path = "../gateway-db" }
gateway-core = { path = "../gateway-core" }
gateway-policy = { path = "../gateway-policy" }
axum = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
base64 = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
tiktoken-rs = "0.6"
regex = "1"
sha2 = { workspace = true }
hex = { workspace = true }
