[package]
name = "gateway-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Model Context Protocol (MCP) gateway — proxy, aggregate, and manage MCP servers"

[dependencies]
gateway-db = { path = "../gateway-db" }
gateway-auth = { path = "../gateway-auth" }
gateway-policy = { path = "../gateway-policy" }

axum = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
parking_lot = { workspace = true }
tokio-stream = "0.1"
