[package]
name = "gateway-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Plugin framework for Sentinel Gateway — request/response hooks with ordered pipelines"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
