[package]
name = "gateway-policy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gateway-db = { path = "../gateway-db" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
tower = { workspace = true }
bytes = { workspace = true }
fred = { workspace = true }
regex = "1"
cel-interpreter = { workspace = true }
reqwest = { workspace = true }
ort = { version = "=2.0.0-rc.12", optional = true }
ndarray = { version = "0.15", optional = true }

[features]
onnx = ["dep:ort", "dep:ndarray"]
