[package]
name = "gateway-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gateway-auth = { path = "../gateway-auth" }
gateway-tenant = { path = "../gateway-tenant" }
axum = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing-opentelemetry = { workspace = true }
prometheus = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
bytes = { workspace = true }
once_cell = { workspace = true }
